--- a/recipes/zuppa.html
+++ b/recipes/zuppa.html
@@ -5,7 +5,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/zuppa.html">Paleo Zuppa Toscana</a>
+    <h1>Zuppa</h1>
 </body>
 </html>
